--- a/roles/i3/templates/i3config.j2
+++ b/roles/i3/templates/i3config.j2
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Overpass 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -36,7 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+quotedbl kill
 
 # start rofi (a program launcher)
-bindsym $mod+e exec rofi -show drun
+bindsym $mod+e exec rofi -show drun -font "Overpass 12"
 
 # change focus
 bindsym $mod+h focus left
