Adding i3blocks and some rofi theme.

--- a/roles/i3/templates/i3config.j2
+++ b/roles/i3/templates/i3config.j2
@@ -148,10 +148,10 @@ bindsym $mod+p mode "resize"
 # Suspend the system (for desktops).
 bindsym $mod+Shift+O exec "systemctl suspend"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
+# Start i3bar to display a workspace bar (plus the system information i3blocks
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks
 }
 
 # Set up feh to do background
